- upgrade pbj-compiler - remove gson from the plugin
____________________________________________________________________
Signed-off-by: berryware <231598+berryware@users.noreply.github.com>

# Conflicts:
#	settings.gradle.kts